# chemcat

./: .readthedocs.yaml  .readthedocs.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
chemcat/: __init__.py  cea.py  janaf.py  network.py  utils.py  version.py
chemcat/cea/: __init__.py  cea.py
chemcat/data/: white_pages.txt
chemcat/janaf/: __init__.py  janaf.py
chemcat/utils/: __init__.py  utils.py
docs/: Makefile  api.rst  chemistry_tutorial.ipynb  chemistry_tutorial.py  chemistry_tutorial.rst  conf.py  database_tutorial.ipynb  database_tutorial.py  database_tutorial.rst  docs_requirements.txt  get_started.rst  index.rst  license.rst  old_chemistry_tutorial.rst
src_c/: _thermo.c  _utils.c
src_c/include/: ind.h  newton_raphson.h
tests/: conftest.py  test_cea.py  test_janaf.py  test_network.py  test_utils.py
