[build-system]
requires = [
    'setuptools>=40.8.0',
    'numpy>=2.0.0',
]
build-backend = "setuptools.build_meta"

[project]
name = "chemcat"
description = "Chemistry Calculator for Atmospheres"
readme = "README.md"
license = { file = "LICENSE" }

#https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
dynamic = ["version"]

requires-python = ">=3.9"
authors = [
  {name = "Patricio Cubillos", email = "pcubillos@fulbrightmail.org"},
  {name = "Jasmina Blecic", email = "jasmina@nyu.edu"},
]

dependencies = [
    'numpy>=1.23.5',
    'scipy>=1.5.4',
    'matplotlib>=3.3.4',
    'more-itertools>=8.4.0',
]

[project.optional-dependencies]
test = [
    'pytest>=3.9',
]

[project.urls]
"Homepage" = "https://github.com/atmolib/chemcat"

[tool.setuptools.dynamic]
version = {attr = "chemcat.version.__version__"}

#https://setuptools.pypa.io/en/stable/userguide/package_discovery.html
[tool.setuptools.packages]
find = {namespaces = false}  # Take only folders with a __init__.py file

